# GUI-PPP2

./: CMakeLists.txt  Graph.h  Instrukcja instalacji biblioteki do grafiki w C++ CMAKE.docx  Instrukcja instalacji biblioteki do grafiki w C++.docx  README.md  Simple_window.h  main.cpp
